--- a/index.html
+++ b/index.html
@@ -1,236 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="global.css" />
-    <title>SketchValid8</title>
-  </head>
-  <body>
-    <header>
-      <span id="title"></span>
-      <div class="switches">
-        <label for="html" class="switch">
-          <input type="checkbox" name="html" id="html" checked />
-          <span>HTML</span>
-        </label>
-        <label for="css" class="switch">
-          <input type="checkbox" name="css" id="css" />
-          <span>CSS</span>
-        </label>
-        <label for="json" class="switch">
-          <input type="checkbox" name="json" id="json" />
-          <span>JSON</span>
-        </label>
-      </div>
-    </header>
-    <div class="file-select">
-      <label for="file-select">Select File</label>
-      <input type="file" name="file-select" id="file-select" accept=".html" />
-    </div>
-    <main>
-      <div class="grid-wrapper">
-        <div
-          role="complementary"
-          class="gridjs gridjs-container"
-          style="width: 100%"
-        >
-          <div class="gridjs-wrapper" style="height: auto">
-            <table role="grid" class="gridjs-table" style="height: auto">
-              <tbody class="gridjs-tbody">
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-                <tr class="gridjs-tr">
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                  <td class="gridjs-td"></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div id="gridjs-temp" class="gridjs-temp"></div>
-        </div>
-      </div>
-      <div id="fileContents"></div>
-    </main>
 
-    <script src="./renderer.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="global.css" />
+  <title>SketchValid8</title>
+</head>
+
+<body>
+  <header>
+    <span id="title"></span>
+    <div class="switches">
+      <label for="html" class="switch">
+        <input type="checkbox" name="html" id="html" checked />
+        <span>HTML</span>
+      </label>
+      <label for="css" class="switch">
+        <input type="checkbox" name="css" id="css" />
+        <span>CSS</span>
+      </label>
+      <label for="json" class="switch">
+        <input type="checkbox" name="json" id="json" />
+        <span>JSON</span>
+      </label>
+    </div>
+  </header>
+  <div class="file-select">
+    <label for="file-select">Select File</label>
+    <input type="file" name="file-select" id="file-select" accept=".html" />
+  </div>
+  <!-- <main>
+    <div id="fileContents"></div>
+  </main> -->
+
+  <main>
+    <div id="resizeContainer">
+      <div id="fileContents"></div>
+    </div>
+  </main>
+  <script src="./renderer.js"></script>
+</body>
+
 </html>
