updated form resize

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="fileContents"></div>
   </main> -->
 
-  <main>
+  <main id="main">
     <div id="resizeContainer">
       <div id="fileContents"></div>
     </div>
