Css Property added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <span></span>
       <!-- <span class="title">TITLE <i><u>(.html, .css, .json)</u></i></span> -->
       <div class="inline-btns">
-        <span title="Toggle Window Size" id="fullscreenButton" class="round-btn bg-green"></span>
+        <span
+          title="Toggle Window Size"
+          id="fullscreenButton"
+          class="round-btn bg-green"
+        ></span>
         <span title="Close" id="closeButton" class="round-btn bg-red"></span>
       </div>
     </div>
@@ -42,6 +46,7 @@
       </div>
     </header>
     <main id="main">
+      <div id="grid" class="grid"></div>
       <div id="file-content"></div>
     </main>
   </body>
