associate json files & build version update

--- a/index.html
+++ b/index.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="global.css" />
-    <style id="style"></style>
-    <title>SketchValid8</title>
-  </head>
-  <body>
-    <div class="dragger">
-      <span class="title">SketchValid8</span>
-      <span></span>
-      <!-- <span class="title">TITLE <i><u>(.html, .css, .json)</u></i></span> -->
-      <div class="inline-btns">
-        <span
-          title="Toggle Window Size"
-          id="fullscreenButton"
-          class="round-btn bg-green"
-        ></span>
-        <span title="Close" id="closeButton" class="round-btn bg-red"></span>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="global.css" />
+  <style id="style"></style>
+  <title>SketchValid8</title>
+  <script id="script"></script>
+</head>
+
+<body>
+  <div class="dragger">
+    <span class="title">SketchValid8</span>
+    <span></span>
+    <!-- <span class="title">TITLE <i><u>(.html, .css, .json)</u></i></span> -->
+    <div class="inline-btns">
+      <span title="Toggle Window Size" id="fullscreenButton" class="round-btn bg-green"></span>
+      <span title="Close" id="closeButton" class="round-btn bg-red"></span>
     </div>
-    <header>
-      <label for="file" class="file">File</label>
-      <input
-        type="file"
-        name="file"
-        id="file"
-        style="display: none"
-        accept="text/html"
-      />
-      <div class="inline-checkbox">
-        <label for="html">
-          <input type="checkbox" name="html" id="html" disabled />
-          <span>HTML</span>
-        </label>
-        <label for="css">
-          <input type="checkbox" name="css" id="css" disabled />
-          <span>CSS</span>
-        </label>
-        <label for="json">
-          <input type="checkbox" name="json" id="json" disabled />
-          <span>JSON</span>
-        </label>
-      </div>
-    </header>
-    <main id="main">
-      <div id="grid" class="grid"></div>
-      <div id="file-content"></div>
-    </main>
-  </body>
+  </div>
+  <header>
+    <label for="file" class="file">File</label>
+    <input type="file" name="file" id="file" style="display: none" accept="text/html" />
+    <div class="inline-checkbox">
+      <label for="html">
+        <input type="checkbox" name="html" id="html" disabled />
+        <span>HTML</span>
+      </label>
+      <label for="css">
+        <input type="checkbox" name="css" id="css" disabled />
+        <span>CSS</span>
+      </label>
+      <label for="json">
+        <input type="checkbox" name="json" id="json" disabled />
+        <span>JSON</span>
+      </label>
+    </div>
+  </header>
+  <main id="main">
+    <div id="grid" class="grid"></div>
+    <div id="file-content"></div>
+  </main>
+</body>
 </html>
 <script src="renderer.js"></script>
