Select File fixes, Installer fix, Css and json fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <header>
     <label for="file" class="file">File</label>
-    <input type="file" name="file" id="file" style="display: none" accept="text/html" />
+    <input type="file" name="file" id="file" style="display: none" accept="text/html, .css, application/json" />
     <div class="inline-checkbox">
       <label for="html">
         <input type="checkbox" name="html" id="html" disabled />
